--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
         <img src="frame1.jpg" alt="Frame 1">
         <h3>Classic Style</h3>
         <p>High-quality materials. $99.99</p>
-        <button style="color: #fff; background-color: #4CAF50;">Add to Cart</button>
+        <!-- Adjusted button style for better contrast -->
+        <button style="color: #000; background-color: #4CAF50;">Add to Cart</button>
     </div>
 
     <div class="frame">
         <img src="frame2.jpg" alt="Frame 2">
         <h3>Modern Chic</h3>
         <p>Sleek design. $129.99</p>
-        <button style="color: #fff; background-color: #4CAF50;">Add to Cart</button>
+        <!-- Adjusted button style for better contrast -->
+        <button style="color: #000; background-color: #4CAF50;">Add to Cart</button>
     </div>
 
     <!-- Add more frames as needed -->
