--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
         <label for="message">Message:</label>
         <textarea id="message" name="message" required></textarea>
 
-        <button type="submit" style="color: #fff; background-color: #4CAF50;">Submit</button>
+        <!-- Adjusted button style for better contrast -->
+        <button type="submit" style="color: #000; background-color: #4CAF50;">Submit</button>
     </form>
 </section>
-
+    
 <!-- Footer Section -->
 <footer>
     <p>&copy; 2023 Eye Glasses Shop. All rights reserved.</p>
